--- a/pom.xml
+++ b/pom.xml
@@ -60,16 +60,45 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		
+
+
+
+		 	<dependency>
+		        <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-starter-test</artifactId>
+		        <scope>test</scope>
+		    </dependency>
+		
+		    <dependency>
+		        <groupId>org.springframework.security</groupId>
+		        <artifactId>spring-security-test</artifactId>
+		        <scope>test</scope>
+		    </dependency>
+		
+		    <dependency>
+		        <groupId>org.junit.jupiter</groupId>
+		        <artifactId>junit-jupiter</artifactId>
+		        <scope>test</scope>
+		    </dependency>
+		
+		    <dependency>
+		        <groupId>org.mockito</groupId>
+		        <artifactId>mockito-core</artifactId>
+		        <scope>test</scope>
+		    </dependency>
+		
+		    <dependency>
+		        <groupId>org.mockito</groupId>
+		        <artifactId>mockito-junit-jupiter</artifactId>
+		        <scope>test</scope>
+		    </dependency>
+
+
+
+
+
+
 	</dependencies>
 
 	<build>
